# DP5

./: .buildinfo  .gitignore  CNN_model.py  DP4.py  DP5.py  DiastereomerGeneration.py  ETKDG.py  Error_Bayes_Function.p  Error_correct_kde.p  Exp_Bayes_Function.p  Gaussian.py  Highthroughput_DP5.py  MacroModel.py  NMR.py  PyDP4.py  REINVENT.md  StructureInput.py  Tinker.py  analysis.html  api.html  config_anatomy.html  dft_api.html  dft_architecture.html  dft_methods.html  dp5_analysis.html  env_file.yml  genindex.html  index.html  license.md  nmr_processing.html  nmr_processing_api.html  nmr_processing_methods.html  nmrfile.json  objects.inv  py-modindex.html  pyproject.toml  readme.md  sdftinkerxyzpy.py  search.html  searchindex.js  (+4 more)
DP5.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
_sources/: analysis.rst.txt  api.rst.txt  config_anatomy.rst.txt  dft_api.rst.txt  dft_methods.rst.txt  dp5_analysis.rst.txt  index.rst.txt  nmr_processing.rst.txt  usage.rst.txt
analysistree/: dp5.analysis.dp4.DP4.html  dp5.analysis.dp4.html
config/: default_config.toml  nw_config.toml
conformer_search/: conf_prune.py
dft/: __init__.py  base_dft_method.py  gaussian.py  nwchem.py  orca.py
dp5/: __init__.py  load_config.py  logger.py  runner.py
neural_net/: CNN_model.py  mean_model_preprocessor.p
nmr_processing/: Carbon_assignment.py  Proton_assignment.py  __init__.py  nmr_ai.py  proton_processing.py
nmrdb-dataset/: LICENSE  README.md
old_files/: DP4.py  DP5.py  DP5_linux.yml  Exp_correct_kde.p  cli_module.py
reassignments/: README.md
run/: run_dft.py  (+3 more)
(+551 files in other folders)
